# GNSS_Multipath_Analysis_Software

./: .gitignore  LICENSE.md  README.md  Running_multipath_analysis_example.py  build_and_upload_to_pypi.sh  pyproject.toml  read_rinex.py
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
.github/: pypi-package-upload.yml
.github/workflows/: pypi-package-upload-pypi.yml  run-tests.yml  (+3 more)
Admin/: Kjente forskjeller mellom mitt og Bjørn.docx  Planlagte endringer i programmet.docx
Kepler2ECEF/: Geodetic_functions.py  JD2GMST.py  Satkoord2_GLO.py  Satkoord2_GLO_new.py  Satkoord2_GLO_new2.py  compute_GLO_coord_from_nav.py  compute_azimut_elev.py  kepler2ecef.py
Multipath_analysis/: GNSS_MultipathAnalysis.py  GNSS_Receiver_QC_2020.py  GNSS_Receiver_QC_2020_script.py  Geodetic_functions.py  Kjente problem med min programvare.docx  REMOVE_SYSTEM.py  Running_multipath_analysis_example.py  TEST_INTERPOLATE.py  TEST_RESULTS.py  TEST_SP3.py  TEST_interpol.py  barylag.py  combineSP3Nav.py  computeDelayStats-LAPTOP-N4TE71F1.py  computeDelayStats.py  computeSatElevAimut_fromNav.py  computeSatElevations.py  detectPhaseSlips.py  estimateSignalDelays.py  get_elevation_angle.py  gpstime2date.py  make_polarplot.py  make_polarplot_dont_use_TEX.py  orgSlipEpochs.py  plotResults.py  preciseOrbits2ECEF.py  readFrequencyOverview.py  readRinexNav.py  readRinexObs.py  readRinexObs2_11.py  readRinexObs304.py  read_SP3Nav.py  requirements.txt  runAnalysis.py  signalAnalysis.py  test_SKYPLOT.py  writeOutputFile.py
Read SP3/: ex_script.py  read_SP3Nav.py  skript_sp3.py  skript_sp3_2.py
Read_RINEX_OBS/: kepler2ecef.py  readRinexObs304-LAPTOP-N4TE71F1.py  readRinexObs304.py  readRinexObs304_script.py  readRinexObs304_script2.py  read_rinex_obs.py  rinexFindNEpochs304.py  rinexReadObsBlock304.py  rinexReadObsBlock304_script.py  rinexReadObsBlockHead304.py  rinexReadObsBlockHead304_script.py  rinexReadObsFileHeader304.py  rinexReadObsFileHeader304_script.py  run_Read_RINEX.py  run_rinex_obs_reader.py
Read_RINEX_nav/: read_rinex2_nav.py  read_rinex3_nav.py
Read_SP3/: read_SP3Nav.py
Results/: NMBUS_SAMSUNG_S20_Report.txt  OPEC00NOR_S_20220010000_01D_30S_MO_3_Report.txt
Results_NMBUS/: NMBUS_SAMSUNG_S20_Report.txt  analysisResults.pkl
Results_OPEC/: OPEC00NOR_S_20220010000_01D_30S_MO_3_Report.txt
Results_example/: OPEC00NOR_S_20220010000_01D_30S_MO_3_Report.txt
Tests/: analysisResults_NMBUS.pkl
src/: ClassPreciseOrbits2ECEF.py  Examples_on_how_to_run_it.ipynb  GNSSPositionEstimator.py  GNSS_MultipathAnalysis.py  Geodetic_functions.py  RinexNav.py  Rinex_Frequency_Overview.txt  Running_multipath_analysis_example.py  SLETT_ETTERPAA.py  SP3Interpolator.py  SP3Interpolator3.py  SP3PositionEstimator.py  StatisticalAnalysis.py  computeSatElevAzimuth_fromNav.py  computeSatElevations.py  estimateSignalDelays.py  getLLISlipPeriods.py  make_polarplot.py  make_polarplot_dont_use_TEX.py  plotResults.py  preciseOrbits2ECEF.py  readRinexNav.py  readRinexObs.py  readRinexObs2_11.py  requirements.txt  writeOutputFile.py
tests/: analysisResults.pkl.zst  analysisResults_NMBUS.pkl  analysisResults_OPEC00NOR_S_20220010000_01D_30S_MO_3.04_croped.pkl.zst  test_BroadNavPositionEstimator.py  test_GNSSPositionEstimator.py  test_GNSS_MultipathAnalysis.py  test_SP3PositionEstimator.py
(+61 files in other folders)
