[build-system]
requires = ["setuptools>=61.0","matplotlib","numpy","pandas","tqdm","zstandard","pytest"]
build-backend = "setuptools.build_meta"


[project]
name = "gnssmultipath"
version = "1.4.4"
authors = [
  { name="Per Helge Aarnes", email="per.helge.aarnes@gmail.com" },
]
description = "A python software that provides comprehensive solutions for GNSS multipath analysis."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/paarnes/GNSS_Multipath_Analysis_Software"
"Bug Tracker" = "https://github.com/paarnes/GNSS_Multipath_Analysis_Software/issues"